# pyblish-manager

./: README.md  pyproject.toml  requirements.txt
docs/: README.md
pyblish-manager/: manager_GUI_widget.py  pyblish_register_types.py
pyblish_manager/: manager_GUI_widget.py  pyblish_register_types.py
