[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["pyblish_manager"]


[project]
name = "pyblish-manager"
authors = [
    {name = "Hannes D"},
]
description = "a qt widget to edit the active Pyblish environment"
readme = "docs/README.md"
requires-python = ">=3.4"
keywords = ["commands", "pipeline", "tool", "pyblish", "validation"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"']
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Source = "https://github.com/hannesdelbeke/pyblish-manager"
